workeded on index.html and quiz.html

--- a/end.html
+++ b/end.html
@@ -13,9 +13,9 @@
   <div id="end-page">
     <div class="container end-page">      
       <div class="text-center center-text">
-        <h1 class="mx-20px">Thank you for taking the JavaScript Quiz !!</h1>
-        <h2 id="my-score">SCORE: 100 points</h2>
-        <h2 id="questions-answered">You answered 10 out of 15 questions correctly !</h2>
+        <h1 class="mx-20px" id="thank-you"></h1>
+        <h2 id="my-score"></h2>
+        <h2 id="questions-answered"></h2>
         <h2>Enter your name below to save your score in the leaderboard</h2>
         <form>
           <input class="my" type="text" id="name" placeholder="Name" autofocus>
