--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <h3 class="mx-20px">Rules</h3>
         <ol>
           <li>You get 10 points for every correct answer.</li>
-          <li>Time left is reduced by one minute for each incorrect answer.</li>          
+          <li>Total quiz time left is reduced by one minute for each incorrect answer.</li> 
+          <li>For an incorrect guess, you have 15 seconds before the quiz moves on to the next question</li>         
           <li>Game is over when all the questions are answered or when the timer runs out.</li>
         </ol>
       </div>
