--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,8 @@
         <button id="option3" class="option-btn">Option 3</button>
         <button id="option4" class="option-btn">Option 4</button>
       </div>      
-      <div id="progress"></div>
+      <div id="progress"></div>      
+      <div id="countdown"></div>
       <div id="comment"></div>
     </div>
   </div>
