--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>JavaScript Quiz</title>
 </head>
 <body>
-
+<!-- Starting page of the app -->
   <div id="start-page">
     <div class="container start-page">
       <h1 class="mx-20px">Welcome to the JavaScript Quiz</h1>
@@ -23,10 +23,13 @@
         </ol>
       </div>
       <h2 class="mx-20px">Happy Learning !</h2>
+      <!-- Start quiz button -->
       <button id="begin-btn" class="btn mx-5px">Begin Quiz</button>
+      <!-- View high scores button -->
       <a id="view-high-score-btn" class="btn mx-5px" href="highscores.html">View High Score</a>
     </div>
   </div>
+
   <script src="./assets/js/index.js"></script>
 </body>
 </html>
